# TimeSeriesClassifier

./: README.md  pyproject.toml
ml/models/classifiers/: conv1d.py
notebooks/: TimeSeriesClassifier.ipynb
